Add alerts for invalid ssl certs
This patch was provided by dila in #xchat

It will show an alert on invalid certs to add
temp or permanent exceptions per server.

--- a/src/fe-gtk/fe-gtk.vcxproj
+++ b/src/fe-gtk/fe-gtk.vcxproj
@@ -163,6 +163,7 @@ $(TextTransformPath) -out hexchat.rc hexchat.rc.tt
     <ClCompile Include="sexy-iso-codes.c" />
     <ClCompile Include="sexy-marshal.c" />
     <ClCompile Include="sexy-spell-entry.c" />
+    <ClCompile Include="sslalert.c" />
     <ClCompile Include="textgui.c" />
     <ClCompile Include="urlgrab.c" />
     <ClCompile Include="userlistgui.c" />
