--- a/src/fe-gtk/fe-gtk.vcxproj.filters
+++ b/src/fe-gtk/fe-gtk.vcxproj.filters
@@ -188,6 +188,9 @@
     <ClCompile Include="resources.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sslalert.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="hexchat.exe.manifest">
